--- a/README.adoc
+++ b/README.adoc
@@ -1,65 +1,74 @@
 
+
 = SourceBuddy
 
 
 
+== Introduction
 
-
-
-SourceBuddy is a very simple Java source compiler facade in front of the JDK-provided `javac` compiler.
-I designed it for applications creating Java source code on the fly during run-time.
-The JDK API is complex and hard to use.
-You have to implement a `JavaFileManager` and `JavaFileObject`, which is possible, but SourceBuddy does it for you.
-
-Using SourceBuddy, you do not need to implement anything except your application logic.
-You get a `Compiler` object calling the `Compiler.java()`, and from there, all you need is
-
-* specify the source code either as Java strings or files,
-* call `compile()`
-* fetch the compiled `.class` files or the loaded classes.
-
-The library provides a one-call API if your application generates only one Java file.
-You can call the `Compiler.compile(className,sourceCode)` static method that does everything.
-It compiles the source code, loads the class(es) generated from the source, and returns the class.
-
-The following example shows how to use the one-call API:
+You can compile Java source code you created dynamically in your Java application.
+Your code can create the source code of one or more Java classes, pass the strings to SourceBuddy and use the classes.
 
 [source,java]
 ----
- 1. String source = "package com.sb.demo;\n" +
- 2.         "\n" +
- 3.         "public class MyClass implements TestInterface{\n" +
- 4.         "    public String a() {\n" +
- 5.         "        return \"x\";\n" +
- 6.         "  }\n" +
- 7.         "}";
- 8. Class<?> myClassClass = Compiler.compile("com.sb.demo.MyClass", source);
- 9. TestInterface myClass = (TestInterface)myClassClass.getConstructor().newInstance();
-10. String s = myClass.a();
+String source = """
+        package com.sb.demo;
+
+        public class MyClass implements Talker{
+            @Override
+            public void say() {
+                System.out.println("Hello, Buddy!");
+          }
+        }""";
+Class<?> myClassClass = Compiler.compile(source);
+Talker myClass = (Talker) myClassClass.getConstructor().newInstance();
+myClass.say();
 
 ----
 
-The variable `source` defines the to-be-compiled code.
-The compilation and loading of the class happen on line 8.
-It is the line using the compilation API.
-The `MyClass` implemented interface, `TestInterface`, is defined in the project's test.
-Classes and interfaces in the host application executing the compilation are available for the Java code to be compiled.
-The instance created using reflection can be cast to the implemented interface (line 9), and line 10 invokes the method defined there.
+SourceBuddy is a simple Java source compiler facade in front of the JDK-provided `javac` compiler.
+I designed it for applications creating Java source code on the fly during run-time.
+The JDK API is complex and hard to use.
+You can compile Java code using only the JDK, but using SourceBuddy, it is nider.
+Using SourceBuddy, you do not need to implement anything except your application logic.
+
+image::images/compile_flow.svg[]
+You
+
+. get a `Compiler` object calling the `Compiler.java()`, and from there, all you need is
+. specify the source code either as Java strings or files,
+. call `compile()`
+. fetch the compiled `.class` files as `byte[]`, save to file or the load the classes.
+. use the class and instances (not on the picture).
+
+[source,java]
+----
+Talker myClass = Compiler.java().from(source).compile().load().newInstance(Talker.class);
+myClass.say();
+
+----
+
+There is
+
+* a simple API with one call for simple cases compiling one class only, and
+
+* a still simple, but more versatile fluent API for cases being a bit more complex.
 
 In this document, we will explain the details of how to use the library, including
 
-* dependency parameters,
+* Maven coordinates,
 
 * simple API,
 
 * Fluent API,
 
+* Handling Hidden Classes
+
 * support.
 
-== Dependency Parameters
+== Maven Coordinates
 
 
-To use the library, it has to be on the classpath for your application, as it is for every library.
 The library is available from Maven central.
 The Maven central coordinates are:
 
@@ -77,36 +86,16 @@ SourceBuddy requires Java 17.
 == Simple API
 
 You can use the simple API in projects requiring only one source file in a compilation unit.
-To do that, the class `com.javax0.sourcebuddy.Compiler` defines a static method `compile`.
+To do that, the class `com.javax0.sourcebuddy.Compiler` defines a static method `compile().
+Here is the line from the example displayed in the introduction using this method:
 
 [soure,java]
 ----
-Class<?> myClassClass = Compiler.compile("com.sb.demo.MyClass", source);
+Class<?> myClassClass = Compiler.compile(source);
 
 ----
 
-The method's first parameter is the binary name of the class.
-The second parameter is the string source code of the class.
-
-[NOTE]
-====
-The binary name of a class is the name returned by the method `Class.getName()`.
-A class can have three different names:
-
-* Simple name,
-
-* Canonical name, and
-
-* Binary name, many times referred to as name.
-
-The simple name is the name of the class without any package prefix or enclosing class prefix.
-The canonical name is the name we usually refer to the classes in the Java source unless imported.
-The binary name is the name of how the JVM knows the class.
-With some simplification, the binary name of the class has the `$` in it for anonymous and inner classes.
-Canonical names have `.` between the name of the outer class and the inner classes' names.
-Anonymous classes have no canonical name.
-In other cases, the binary and canonical names are the same.
-====
+The method's parameter is the string source code of the class.
 
 The method's return value is the class compiled and loaded into the JVM.
 
@@ -114,33 +103,37 @@ If there is an error during the compilation, the call will throw a `CompileExcep
 
 == Fluent API
 
-The fluent API is available when there are more files to be compiled or when you want to do something other than loading with the class files.
+The fluent API is available when there are more files to be compiled or when you want to do something other than simply loading with the class files.
 
-The fluent API is chained, offering the possible methods only at the locations where you can use them.
 To demonstrate the use of the API, we will use the sample code:
 
 [source,java]
 ----
- 1. String sourceFirstClass = "package com.sb.demo;\n" +
- 2.         "\n" +
- 3.         "public class FirstClass {\n" +
- 4.         "    public String a() {\n" +
- 5.         "        return \"x\";\n" +
- 6.         "  }\n" +
- 7.         "}";
- 8. final var compiled = Compiler.java()
- 9.         .from("com.sb.demo.FirstClass", sourceFirstClass)
-10.         .from(Paths.get("src/test/java"))
-11.         .compile();
-12. compiled.saveTo(Paths.get("./target/generated_classes"));
-13. compiled.stream().forEach(bc -> System.out.println(Compiler.getBinaryName(bc)));
-14. final var loaded = compiled.load();
-15. Class<?> firstClassClass = loaded.get("com.sb.demo.FirstClass");
-16. loaded.stream().forEach( klass -> System.out.println(klass.getSimpleName()));
-17. final var compiler = loaded.reset();
-18. final var sameCompiler = compiled.reset();
+ 1. String sourceFirstClass = """
+ 2.         package com.sb.demo;
+ 3. 
+ 4.         public class FirstClass {
+ 5.             public String a() {
+ 6.                 return "x";
+ 7.           }
+ 8.         }""";
+ 9. final var compiled = Compiler.java()
+10.         .from("com.sb.demo.FirstClass", sourceFirstClass)
+11.         .from(Paths.get("src/test/java"))
+12.         .compile();
+13. compiled.saveTo(Paths.get("./target/generated_classes"));
+14. compiled.stream().forEach(bc -> System.out.println(Compiler.getBinaryName(bc)));
+15. final var loaded = compiled.load();
+16. Class<?> firstClassClass = loaded.get("com.sb.demo.FirstClass");
+17. Object firstClassInstance = loaded.newInstance("com.sb.demo.FirstClass");
+18. loaded.stream().forEach(klass -> System.out.println(klass.getSimpleName()));
+19. final var compiler = loaded.reset();
+20. final var sameCompiler = compiled.reset();
 
 ----
+
+
+In the following sections we wil go through the lines of the code.
 
 
 
@@ -148,6 +141,7 @@ To demonstrate the use of the API, we will use the sample code:
 
 To start the compilation, you must have a `Compiler` object.
 To get that, you have to call the
+
 
 [source,java]
 ----
@@ -261,25 +255,28 @@ The more straightforward and recommended way is:
 It will load the classes from the memory-stored byte code to the JVM.
 This loading will convert the byte codes to `Class` objects.
 
-A version named `loadHidden()` will use a special class loader loading the class as a hidden class.
+A version of the method, named `loadHidden()` will use a special class loader loading the class as a hidden class.
 link:https://openjdk.org/jeps/371[JEP371] describes hidden classes.
-They are classes dynamically loaded by the program but are hidden because they do not have a canonical name.
+They are dynamically loaded and hidden because they do not have a canonical name.
 The only way to access them is via reflection using the class object returned by the library (see the next chapter).
 Hidden classes have a technical name; hence you will get some value if you call `getName()` or `getSimpleName()` on the class.
 On the other hand, `getCanonicalName()` will return `null`.
 `getCanonicalName()` returns the format of the name used in the Java source code to refer to the class.
+Since it is `null` you cannot reference these classes.
 
-NOTE: You can load many hidden classes in the source code with the same name.
-The Java run-time will delete the name.
-SourceBuddy can also load several versions of a single named class, but you must use different compiler objects.
+NOTE: Even though these classes "have no name" you still have to give them some name following the `class` keyword.
+This name for the Java run-time is not inetresting.
+You can load many hidden classes in the source code with the same name.
+SourceBuddy, on the other hand, needs a distinguising name unique inside one compiler object.
+It can also load several versions of a single named hidden class, but you must use different compiler objects.
 The reason: the `Compiler` object identifies the classes using the names you provided for the compilation.
 If two classes have the same name, then `loaded.get(className)` would not know which version it has to return.
 
 [NOTE]
 ====
-This hidden class loading cannot work without a `Lookup` object.
-This object is used to create the new hidden class.
-The compiled class has to be in the same package as the code that creates the lookup objects.
+The hidden class loading cannot work without a `Lookup` object.
+The lookup object is used to create the new hidden class.
+It is a JDK requirement that the compiled class has to be in the same package as the code that created the lookup objects.
 
 The recommended way is
 
@@ -287,29 +284,31 @@ The recommended way is
 
 * passing the resulting object to the method `loadHidden()` as first argument, and
 
-* have the compiled class in the same package as the code using the `Compiler`.
+* have the compiled class in the same package as the code using the `Compiler` and calling `MethodHandles.lookup()`.
 
 This may look as simple as
 
 [source,java]
 ----
-Compiler.java().from("Z", "class Z{}").compile().loadHidden(MethodHandles.lookup());
+Compiler.java().from( "package com.sb.demo;class Z{}").compile().loadHidden(MethodHandles.lookup());
 ----
 
-For a simpler interface you can also call the metjod without this argument, as
+For a simpler interface you can also call the method without this argument, as
 
 [source,java]
 ----
 Compiler.java().from("Z", "class Z{}").compile().loadHidden();
 ----
 
+Calling the method `loadHidden()` without a lookup object is more resouce intensive.
 ====
 
 [NOTE]
 ====
 The hidden class loading can also have `ClassOption` vararg arguments.
 These control whether a loaded hidden class becomes attached to the classloader and to be a member of a nest host.
-To accommodate the possibility, the method `loadHidden(MethodHandles.Lookup lookup, ClassOption... options)` also accepts these as vararg parameters.
+To accommodate the possibility, the methods `loadHidden(ClassOption... options)` and `loadHidden(MethodHandles.Lookup lookup, ClassOption... options)` also accepts these as vararg parameters.
+I see no reason where you would use these with SourceBuddy.
 ====
 
 Note that the methods `load()` and `loadHidden()` return objects which handle the loaded classes.
@@ -335,13 +334,11 @@ When you call
 
 [source,java]
 ----
-        Object f = loaded.newInstance("com.sb.demo.FirstClass",Object.class);"
+        Object firstClassInstance = loaded.newInstance("com.sb.demo.FirstClass");
+
 ----
 
 you will get a new instance of the class.
-The second argument can be `Object.class` or any class of interface the dynamically compiled class extends or implements, and you can cast the object to this type.
-This method is generic; the return type will be the given type, so casting is not necessary.
-
 
 === 8.  Stream through the class objects
 
@@ -349,12 +346,13 @@ You can also get a stream of the classes.
 
 [source,java]
 ----
-        loaded.stream().forEach( klass -> System.out.println(klass.getSimpleName()));
+        loaded.stream().forEach(klass -> System.out.println(klass.getSimpleName()));
 
 ----
 
-Since the method `load()` returned a new object, the method `stream()` is different this time.
-It returns a `Stream<Class>` type and not the byte codes.
+Note that this is not the same `stream()` method we called after the compilation.
+That method returned a stream of byte arrays.
+This method returns a stream of classes.
 
 === 9.  Reset the compiler
 
@@ -368,9 +366,11 @@ In most cases, it is better to get a new compiler calling
 
 ----
 
-The only case when the reuse of the compiler is needed is when the classes in the new compilation etap need access to the classes in the previous etap.
+The only case when the reuse of the compiler is needed is when the classes in the new compilation etap need access to the classes from previous etaps.
 Using two different compiler objects will compile classes that see the classes of the 'host' code and the classes added to the compiler, but not each other.
 When a compiler object is reset, the subsequent compilation round will see all the host classes and all the classes compiled previously and added in the current etap.
+
+image::images/visibility.svg[]
 
 When the compilation starts, the compiler will compile all the java classes you ever added to the compilation.
 It means that older classes will be recompiled, consuming CPU.
@@ -383,6 +383,7 @@ To reset the compiler, you can invoke the method
         final var compiler = loaded.reset();
 
 ----
+
 
 You can invoke this method on the compiler object, even if you used it to create a loaded object:
 
@@ -405,30 +406,34 @@ except that it already contains the classes you added to it previously.
 WARNING: You can not redefine a class the program has already compiled.
 The program will compile the new source file for an existing class name.
 It will store the byte code; you will get the new version when calling `stream()`; you can save the new version.
-However, when you call `load()`, it will not load into memory.
-The class loader will see that a class under its management is already loaded and skip the loading.
-It is a limitation of the Java class loading structure.
-A class loader cannot unload and reload a class.
+However, when you call `load()`, it will not load the new version into memory.
+The class loader will see that a class under its management is already loaded and it skips the loading.
+That is how classloaders work in Java.
 
 You cannot reset a compiler that you used to load hidden classes.
 Hidden classes have no names.
-The newly defined classes cannot reference them.
+The newly defined classes cannot reference any of the previous etap's hidden classes.
 In this case, a reset compiler object would increase the CPU load without any added benefit.
+Calling reset on a compiler object that was used to load hidden classes will throw an exception.
 
 == Loading Hidden Classes
 
 This chapter describes some technical details about hidden class loading.
-It gives a reason why it is recommended to pass a lookup object to the method `loadHidden()`.
-Understanding the details here is not necessary to use the library.
-The simple approach is the following:
+In the previous chapter in section 6.  we discussed the hidden class loading.
+There is a method `loadHidden()` to load the compiled classes hidden.
+The method has a version that accepts a lookup object as argument; and we also said that using it without this argument is more resouce intensive.
 
+In this chapter we will describe why it is the case.
+Understanding the details here is not necessary to use the library.
+
+The simple approach is the following:
 
 . Use the `loadHidden()` method without a lookup object.
 If the performance is acceptable for your application you are done.
 . Use the version passing a lookup object and test your performance.
-You may also modify the package of the compiled class.
+You may also need to select compiled class' package properly.
 
-And not the technical details.
+And now, the technical details.
 
 When calling `loadHidden()` without a lookup object the class loader will create one.
 It will be from the same package as the compiled class.
@@ -439,16 +444,50 @@ This is not likely to be the package your compiled source class is in.
 
 The version of the method `lookup()` that gets the class as argument is not public.
 You cannot create a lookup object for anything else than the caller.
-The class loader has to have a class,
+And still, the class loader needs that for you to load your hidden class.
+
+To do that it has to have a class,
 
 * which is in the same package as the compiled class,
 
 * has a method that creates a lookup object and returns it to be used by the class loader.
 
-To do that the class loader fires up a new `Compiler` object and creates a class implementing the `Supplier` interface.
+The class loader fires up a new `Compiler` object and creates a class implementing the `Supplier` interface.
 Then it calls the `Supplier.get()` method to get access to the lookup object.
+Here is the actual code that does that:
 
-Since this process needs a new compiler, source compilation, creating a new class loader object and invoking the created dynamic class object it will take some time that may be significant in your case.
+[source,java]
+----
+lookup = (MethodHandles.Lookup) Compiler.java().from(packageDot + lookupHelperBinaryName, """
+                %s
+
+                import java.util.function.Supplier;
+                import java.lang.invoke.MethodHandles;
+
+                public class %s implements Supplier<MethodHandles.Lookup> {
+                    public %s(){}
+                    @Override
+                    public MethodHandles.Lookup get() {
+                        return MethodHandles.lookup();
+                    }
+                }
+                """.formatted(packageLine, lookupHelperBinaryName, lookupHelperBinaryName)).compile().load()
+        .newInstance(packageDot + lookupHelperBinaryName, Supplier.class).get();
+
+----
+
+[NOTE]
+====
+In the code above the variable `packageLine` contains the `package` keyword and the name of the package and a `;`.
+When the generated class is in the default package then this variable is empty string.
+
+`lookupHelperBinaryName` is the name of the class. This is just the letter `A` and a counter to have a unique name every time.
+It could be a constant.
+This variable is used twice, one for the name of the class and once to create a public constructor.
+
+====
+
+Since this process needs a new compiler, source compilation, creating a new class loader object and invoking the created dynamic class object it will take some time that may be significant in some cases.
 
 == Support
 
